<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:text="@string/titulo"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_Codigo"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/et_codigo"
                android:inputType="numberSigned"
                android:textColor="@color/white"
                android:textColorHint="@color/hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_Nombre"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_nombre"
                android:inputType="textPersonName"
                android:textColorHint="@color/hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_precio"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_precio"
                android:inputType="numberDecimal"
                android:textColorHint="@color/hint" />
        </LinearLayout>

        <Button
            android:id="@+id/crearBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="crear"
            android:text="@string/crear_btn" />

        <Button
            android:id="@+id/buscarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buscar"
            android:text="@string/buscar_btn" />

        <Button
            android:id="@+id/modificarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificar_btn" />

        <Button
            android:id="@+id/eliminarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/eliminar_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>